::Fire:: add rnn_cell_ops

--- a/im2txt/BUILD
+++ b/im2txt/BUILD
@@ -40,6 +40,7 @@ py_library(
         "//im2txt/ops:image_embedding",
         "//im2txt/ops:image_processing",
         "//im2txt/ops:inputs",
+        "//im2txt/ops:rnn_cell_ops",
     ],
 )
 
