change learning rate

--- a/im2txt/BUILD
+++ b/im2txt/BUILD
@@ -108,3 +108,15 @@ py_binary(
         "//im2txt/inference_utils:vocabulary",
     ],
 )
+
+py_binary(
+    name = "run_inference_1000",
+    srcs = ["run_inference_1000.py"],
+    srcs_version = "PY2AND3",
+    deps = [
+        ":configuration",
+        ":inference_wrapper",
+        "//im2txt/inference_utils:caption_generator",
+        "//im2txt/inference_utils:vocabulary",
+    ],
+)
